@@ -58,7 +58,8 @@ style "default"
   text[SELECTED]   = "#ffffff"
   text[ACTIVE]     = "#000000"
 
-  engine "cleanice" {} #just a temporary engine before XD2
+  engine "mist" {} # just a temporary engine before XD2
+                   # http://primates.ximian.com/~dave/mist/
 
 
 
