@@ -1,0 +1,6 @@
+themedir = $(datadir)/themes/Gorilla/gtk
+
+theme_DATA=  \
+gtkrc 
+
+EXTRA_DIST = $(theme_DATA)
